Fix: fixed an issue with background flickering when resizing the browser window layout on mobile devices (during the hiding/appearance of the toolbar)

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -7,12 +7,22 @@ html {
 }
 
 body {
+  position: relative;
+  overflow-x: hidden;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background-image: url(../assets/img/bcg-ferrari.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed;
   background-size: cover;
-  position: relative;
+  z-index: -1;
 }
 
 .container {
